# ton-solidity

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md
.circleci/: config.yml  osx_install_dependencies.sh  soltest_all.sh
docs/: installing-solidity.rst  using-the-compiler.rst
libevmasm/: Assembly.cpp  Assembly.h  LinkerObject.h
liblangutil/: EVMVersion.cpp  EVMVersion.h  ErrorReporter.cpp  Exceptions.h  Token.cpp  Token.h
libsmtutil/: CHCSmtLib2Interface.cpp
libsolutil/: StringUtils.h
libyul/: AST.cpp  AST.h  ASTForward.h  ASTNodeRegistry.cpp  ASTNodeRegistry.h  AsmAnalysis.cpp  AsmAnalysis.h  AsmJsonConverter.cpp  AsmJsonConverter.h  AsmJsonImporter.cpp  AsmJsonImporter.h  AsmParser.cpp  AsmParser.h  AsmPrinter.cpp  AsmPrinter.h  CMakeLists.txt  CompilabilityChecker.cpp  Dialect.h  Exceptions.h  Object.cpp  ObjectOptimizer.cpp  ObjectOptimizer.h  ObjectParser.cpp  ScopeFiller.cpp  ScopeFiller.h  Utilities.cpp  Utilities.h  YulControlFlowGraphExporter.cpp  YulControlFlowGraphExporter.h  YulName.cpp  YulName.h  YulStack.cpp  YulStack.h
scripts/: check_style.sh  install_evmone.ps1  tests.sh
solc/: CommandLineInterface.cpp  CommandLineParser.cpp  CommandLineParser.h
test/: Common.cpp  (+3 more)
tools/ethdebug/: CMakeLists.txt
tools/ethdebug/src/: Compiler.cpp  Compiler.h  main.cpp
tools/ethdebug/src/context/: CodeContextDecoder.h
tools/ethdebug/src/data/: InstructionInfo.h
tools/ethdebug/src/ui/: HighlightedTextView.cpp  HighlightedTextView.h  InstructionTableView.cpp  InstructionTableView.h  Styles.h  UserInterface.cpp  UserInterface.h
(+349 files in other folders)
